# bico-certo-API

./: .env_example  .gitignore  Readme.md  main.py  pyproject.toml
app/: main.py
app/api/: auth.py  chat.py  dashboard.py  job_manager.py  password_recovery.py  payment_gateway.py  perfil.py  two_factor.py  upload.py  wallet.py
app/auth/: dependencies.py  jwt_handler.py
app/config/: database.py  redis_config.py  settings.py
app/controller/: job_controller.py
app/ipfs/: ipfs_service.py
app/middleware/: audit.py  error_handler.py  rate_limiter.py
app/model/: bico_certo_main.py  bico_certo_registry.py  chat_model.py  device.py  password_reset.py  session.py  two_factor.py  user.py  wallet.py
app/schema/: auth.py  chat.py  job_manager.py  password_recovery.py  two_factor.py  user.py  wallet.py
app/service/: auth_service.py  chat_service.py  email_service.py  fcm_service.py  ipfs_service.py  job_notification_service.py  password_recovery_service.py  profile_service.py  report_generator.py  two_factor_service.py
app/tests/: test_auth.py
app/util/: device.py  exceptions.py  image_utils.py  logger.py  responses.py  validators.py  w3_util.py
app/wallet/: blockchain_service.py  encryption.py  key_manager.py  mnemonic_service.py  transaction.py  wallet_service.py
app/websocket/: chat_handler.py  notifications_handler.py
contracts/: BicoCerto.sol  BicoCertoAdmin.sol  BicoCertoDisputeResolver.sol  BicoCertoJobManager.sol  BicoCertoPaymentGateway.sol  BicoCertoRegistry.sol  BicoCertoReputation.sol  compile_contracts.py
contracts/interfaces/: IBicoCertoAdmin.sol  IBicoCertoDisputeResolver.sol  IBicoCertoJobManager.sol  IBicoCertoPaymentGateway.sol  IBicoCertoRegistry.sol  IBicoCertoReputation.sol
controller/: job_controller.py
model/: bico_certo_main.py  bico_certo_registry.py
script/: compile_contracts.py  deploy_contracts.py
scripts/: compile_contracts.py  deploy_contracts.py
utils/: deploy_utils.py  w3_utils.py
