[tool.poetry]
name = "bico-certo"
version = "0.1.0"
description = ""
authors = [
    "Salazar <gsaalcantara@gmail.com>"
]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.12,<4"
web3 = "^7.12.1"
py-solc-x = "^2.0.4"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
python-dotenv = "^1.1.1"
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
python-multipart = "^0.0.20"
redis = "^6.4.0"
slowapi = "^0.1.9"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
