[tool.poetry]
name = "bico-certo"
version = "0.1.0"
description = ""
authors = [
    "Salazar <gsaalcantara@gmail.com>"
]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.12,<4"
web3 = "^7.12.1"
py-solc-x = "^2.0.4"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
python-dotenv = "^1.1.1"
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"
pydantic = {extras = ["email"], version = "^2.11.10"}
pydantic-settings = "^2.10.1"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
python-multipart = "^0.0.20"
redis = "^6.4.0"
slowapi = "^0.1.9"
pytest = "^8.4.2"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"
faker = "^37.6.0"
pyotp = "^2.9.0"
qrcode = "^8.2"
pillow = "^11.3.0"
aiosmtplib = "^4.0.2"
python-magic = "^0.4.27"
cryptography = "^45.0.7"
twilio = "^9.8.0"
pylint = "^3.3.8"
black = "^25.1.0"
autoflake = "^2.3.1"
py-ecc = "^8.0.0"
eth-keys = "^0.7.0"
hdwallet = "^3.6.1"
pycryptodome = "^3.23.0"
mnemonic = "^0.21"
eth-account = "^0.13.7"
ipfshttpclient = "^0.7.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "3.2.2"
aiohappyeyeballs = "2.6.1"
pep517 = "^0.13.1"
reportlab = "^4.4.4"
openpyxl = "^3.1.5"
matplotlib = "^3.10.7"
firebase-admin = "^7.1.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
